--- a/ep1-rodrigo-vitor/Makefile
+++ b/ep1-rodrigo-vitor/Makefile
@@ -1,7 +1,7 @@
 all: bccsh ep1
 
 bccsh: bccsh.c
-	gcc -g -Wall -o bccsh bccsh.c -lreadline
+	gcc -Wall -o bccsh bccsh.c -lreadline
 
 ep1: ep1.c
-	gcc -g -Wall -o ep1 ep1.c -pthread
+	gcc -Wall -o ep1 ep1.c -pthread
